# CodonBERT

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
src/codonbert/: __init__.py  config_function.py  data_processing.py  predict.py  train.py
